tests/typing/pass/safemath/safemathraw.act
contract SafeAdd

constructor()
creates

transition add(uint256 x, uint256 y) : uint256

iff
    inRange(uint256, x + y)
    CALLVALUE == 0

updates

returns x + y
