tests/typing/fail/var_aliasing.act
contract A

constructor()

creates

  uint x := 0
  uint y := 0

transition f()

updates

  x := 1
  x := 1

